# simple-rag

./: .gitignore  README.md  pyproject.toml  rag.ipynb
